--- a/web-player/src/index.css
+++ b/web-player/src/index.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -12,45 +16,9 @@ code {
     monospace;
 }
 
-:root {
-  --main-color: rgb(104, 117, 217);
-  --main-color-hover: rgb(104, 117, 217, 0.2);
-  --track-color: #ddd;
+#root {
+  float: left;
+  height: 100vh;
+  width: 100vw;
 }
 
-.customSlider {
-  /* max width of your slider */
-  max-width: 300px;
-  /* Optional: Only If you want to center your slider in the page */
-  margin: auto;
-}
-
-.customSlider-track {
-  /* Top value to align your track to the center of your thumb */
-  top: 8px;
-  /* thickness of the track */
-  height: 4px;
- /* default color of your track */
-  background: var(--track-color);
-}
-
-.customSlider-track.customSlider-track-0 {
-  /* color of the track before the thumb */
-  background: var(--main-color);
-}
-
-.customSlider-thumb {
-  cursor: pointer;
-  /*color for the thumb */
-  background: var(--main-color);
-  /* shape of the thumb: circle */
-  width: 20px;
-  height: 20px;
-  border-radius: 100%;
-  /* remove default outline when selected */
-  outline: none;
-}
-
-.customSlider-thumb:hover {
-  box-shadow: 0 0 0 8px var(--main-color-hover);
-}
