--- a/web-player/src/app.css
+++ b/web-player/src/app.css
@@ -10,6 +10,8 @@
     width: 100%;
     overflow: hidden;
     position: relative;
+    background: var(--background-elevated-base);
+    box-shadow: rgba(0, 0, 0, 0.2) 0 0 0.5em 0.1em;
 }
 
 .app__headerTracksBox {
@@ -22,6 +24,7 @@
 .app__headerTracks {
     font-size: 1.5em;
     font-weight: 600;
+    color: var(--text-base);
 }
 
 .app__body {
@@ -29,6 +32,7 @@
     height: calc(100% - 10em);
     width: 100%;
     overflow: hidden;
+    background: var(--background-base);
 }
 
 .app__footer {
@@ -36,4 +40,6 @@
     height: 6em;
     width: 100%;
     overflow: hidden;
+    background: var(--background-elevated-base);
+    box-shadow: rgba(0, 0, 0, 0.2) 0 0 0.5em 0.1em;
 }
