--- a/web-player/src/audioPlayer.css
+++ b/web-player/src/audioPlayer.css
@@ -25,7 +25,7 @@
     right: 0;
     height: 100%;
     width: 20%;
-    background: linear-gradient(to left, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
+    background: linear-gradient(to left, rgba(36, 36, 36, 1), rgba(36, 36, 36, 0));
 }
 
 .audioPlayer__trackDataInner {
@@ -100,6 +100,7 @@
     height: 100%;
     width: 10%;
     transform: translateY(-50%);
+    color: var(--text-base);
 }
 
 .audioPlayer__playbackTime--left {
