--- a/web-player/src/playbackSlider.css
+++ b/web-player/src/playbackSlider.css
@@ -1,9 +1,3 @@
-:root {
-    --main-color: rgb(104, 117, 217);
-    --main-color-hover: rgb(104, 117, 217, 0.2);
-    --track-color: #ddd;
-}
-
 .playbackSlider {
     float: left;
     height: 100%;
@@ -44,7 +38,7 @@
 .customSlider-thumb, .customSlider-thumb-hidden {
     cursor: pointer;
     /*color for the thumb */
-    background: var(--main-color);
+    background: var(--text-base);
     /* shape of the thumb: circle */
     width: 1.25em;
     height: 1.25em;
