--- a/web-player/src/track.css
+++ b/web-player/src/track.css
@@ -1,9 +1,21 @@
 .track {
     float: left;
-    height: 3em;
+    height: 3.5em;
     width: 100%;
+    padding: 0.1em;
+}
+
+.track__highlight {
+    float: left;
+    height: 100%;
+    width: 100%;
+    transition: background 0.1s;
+    border-radius: 0.5em;
     position: relative;
-    padding-left: 0.25em;
+}
+
+.track:hover > .track__highlight {
+    background: var(--background-highlight);
 }
 
 .track__data {
@@ -33,13 +45,18 @@
     margin: 0.1em;
 }
 
-.track__title {
+.track__title, .track__title--playing {
     font-size: 1.2em;
     font-weight: 600;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: clip;
     display: block;
+    color: var(--text-base);
+}
+
+.track__title--playing {
+    color: var(--main-color);
 }
 
 .track__artist {
@@ -48,4 +65,5 @@
     overflow: hidden;
     text-overflow: clip;
     display: block;
+    color: var(--text-base);
 }
