--- a/web-player/src/play.css
+++ b/web-player/src/play.css
@@ -3,3 +3,32 @@
     font-size: 1em;
     color: var(--text-base);
 }
+
+.play__spinner {
+    animation-name: spin;
+    /*animation-duration: 1000ms;
+    animation-timing-function: linear;*/
+    animation-duration: 1500ms;
+    animation-timing-function: ease;
+    animation-iteration-count: infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+/*@keyframes spin {
+    0% {
+        transform: rotate(-238deg);
+    }
+
+    100% {
+        transform: rotate(-58deg);
+    }
+}*/
