--- a/web-player/src/app.css
+++ b/web-player/src/app.css
@@ -39,6 +39,15 @@
     height: calc(100% - 4em);
 }
 
+.app__spinnerContainer {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 3.5em;
+    color: var(--text-base);
+}
+
 .app__footer, .app__footer--hidden {
     float: left;
     height: 6em;
