--- a/web-player/src/trackList.css
+++ b/web-player/src/trackList.css
@@ -9,3 +9,12 @@
     float: left;
     width: 100%;
 }
+
+.trackList__spinnerContainer {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 3.5em;
+    color: var(--text-base);
+}
