--- a/web-player/src/index.css
+++ b/web-player/src/index.css
@@ -44,6 +44,7 @@ code {
 	--main-color-hover: rgb(104, 117, 217, 0.2);
 	--track-color: #ddd;
 
+	--text-black: #000;
 	--background-base: #121212;
 	--background-highlight: #1a1a1a;
 	--background-press: #000;
