--- a/web-player/src/app.css
+++ b/web-player/src/app.css
@@ -51,3 +51,13 @@
 .app__footer--hidden {
     height: 0;
 }
+
+@media only screen and (max-width: 600px) {
+    .app__body {
+        height: calc(100% - 12em);
+    }
+
+    .app__footer {
+        height: 8em;
+    }
+}
